# neon-engine

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md
.cache/clangd/index/: angle.cpp.AB76E13329D426C2.idx  angle.hpp.8E8B0A033C096A31.idx  angle.test.cpp.D5823D7B48350AB2.idx  api.cpp.0469C4011CA33C26.idx  api.hpp.FAF3EDD14C77D052.idx  application.cpp.7869282393A7ABB9.idx  application.cpp.8748FA01ED3C28DF.idx  application.cpp.965AA7FAED745F0C.idx  application.hpp.263775665B08A1EC.idx  application.hpp.420E3F0C164AC2FC.idx  application.hpp.DFD718C472FAF001.idx  buffer.cpp.8153DD4DB3B4CAFC.idx  buffer.hpp.31B4DFEACAD349FA.idx  camera.cpp.766F0A1339D76E97.idx  camera.hpp.0962A427314BD301.idx  collision_detection.cpp.05F2B810DF51CA29.idx  collision_detection.hpp.EE66852973E469F6.idx  collision_detection.test.cpp.C137AF93C5F03417.idx  color.cpp.A977E213EC990765.idx  color.hpp.74D513C1AB8D4DC6.idx  color.test.cpp.A5812402BA60AD5B.idx  context.cpp.04993820F0338E14.idx  context.cpp.2263F48174706A8C.idx  context.hpp.5A525651EAE6D24E.idx  context.hpp.62CE1B03DFB4211C.idx  context.hpp.BE096028996CA393.idx  cuboid.cpp.9F767784FB9CE511.idx  cuboid.hpp.A9D636F82EDCC3A3.idx  cuboid.hpp.BF47AD111ED30FBB.idx  cuboid.test.cpp.33E18BF0AA34C7D8.idx  cuboid_renderer.cpp.393B8E76139C9D37.idx  cuboid_renderer.hpp.98033468684BF3F0.idx  debug_camera.cpp.A8BAA788AD6348DD.idx  debug_camera.hpp.DC03E32A8BDE28AF.idx  debug_drawer.cpp.F3B3395B61CEB8AF.idx  debug_drawer.hpp.281359FBBD6A0DAA.idx  debug_messenger.cpp.C08F11296B539A49.idx  debug_messenger.hpp.A2E9F9D3F0A4D379.idx  ecs.cpp.002044A3915050DC.idx  ecs.hpp.49A740E90D6A96F0.idx  (+109 more)
ci/: Dockerfile  linter.Dockerfile  tests.Dockerfile
docs/: .gitignore  Doxyfile  README.md  conf.py  index.rst
res/models/cube/: Cube.gltf
res/models/fox/: Fox.gltf
res/shaders/: gltf.frag  gltf.vert  unicolor.vert
src/app/: gltf.cpp  main.cpp  rubiks_cube.cpp  rubiks_cube.hpp  rubiks_cube_piece.cpp  rubiks_cube_piece.hpp  rubiks_cube_system.cpp  rubiks_cube_system.hpp  shader.vert
src/app/scenes/: rubik.cpp  rubik.hpp
src/engine/: README.md  engine.cpp  engine.hpp
src/engine/architecture/: ecs.cpp  ecs.hpp  event.hpp  interface.cpp  interface.hpp
src/engine/data/: templates.hpp
src/engine/debug/: debug_camera.cpp  debug_camera.hpp  debug_drawer.cpp  debug_drawer.hpp  json.hpp  logger.cpp  logger.hpp
src/engine/event/: event.hpp
src/engine/geometry/: angle.cpp  angle.hpp  collision_detection.cpp  collision_detection.hpp  cuboid.cpp  cuboid.hpp  line.hpp  line_segment.hpp  matrix.hpp  orientation.cpp  orientation.hpp  plane.hpp  point.hpp  ray.hpp  rectangle.cpp  rectangle.hpp  rigidbody.cpp  rigidbody.hpp  rotation.cpp  rotation.hpp  scale.hpp  transform.cpp  transform.hpp  translation.hpp  vector.hpp
src/engine/graphics/: camera.cpp  camera.hpp  color.cpp  color.hpp  context.cpp  context.hpp  context_implementation.hpp  cuboid.cpp  cuboid.hpp  gltf_model.cpp  gltf_model.hpp  image.cpp  image.hpp  rectangle.cpp  rectangle.hpp  renderable.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/engine/graphics/api/: application.cpp  application.hpp  context.cpp  context.hpp  window.hpp
src/engine/graphics/component/: cuboid.hpp  global_transform.hpp  line_segment.hpp  rectangle.hpp  render_info.hpp
src/engine/graphics/opengl/: context.cpp  context.hpp
src/engine/graphics/system/: cuboid_renderer.cpp  cuboid_renderer.hpp  global_transform_updater.cpp  line_drawer.cpp  (+6 more)
src/engine/gui/: window.cpp  window.hpp
src/engine/os/: input.hpp  input_manager.cpp  input_manager.hpp  iwindow.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/engine/scene/: api.cpp  api.hpp  factory.hpp  manager.cpp  manager.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  script.cpp  script.hpp
src/engine/time/: update_scheduler.cpp  update_scheduler.hpp
src/test/: README.md  main.cpp  util.hpp
src/test/geometry/: angle.test.cpp  collision_detection.test.cpp  cuboid.test.cpp  line.test.cpp  line_segment.test.cpp  matrix.test.cpp  orientation.test.cpp  point.test.cpp  ray.test.cpp  rectangle.test.cpp  rigidbody.test.cpp  rotation.test.cpp  scale.test.cpp  transform.test.cpp  translation.test.cpp  vector.test.cpp
src/test/graphics/: color.test.cpp
(+32 files in other folders)
